tests/paczka1/small_fuzzy/93890787.err
Error in line 1: Z2baw8yNkC A867 81,7
Error in line 4: JDDdb6 S862 99,1
Error in line 8: tLWz S790 48,6
Error in line 12: JDDdb6 S790 61,9
Error in line 14: JDDdb6 S862 39,1
Error in line 13: tLWz A867 65,0
